# ouroboros-consensus

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENESIS_BRANCHES_DO_NOT_MERGE.md  I need to address.md  Makefile  README-Leios-November-demo.md  README-Leios-October-demo.md  README.md  SECURITY.md  WIP-enrollment-CIP.md  asserts.cabal  cabal.project  demoManifest.json  diff_between_main-pr--hfc-era-peras_AND_peras-staging-2025-11--last-peras-5.diff  diff_between_main_AND_main-pr--hfc-era-peras.diff  docusaurus.config.js  flake.nix  fourmolu.yaml  leios-voting-design.md  leiosdemo202510-first-script  mk-skin-plan.md  myManifest.json  ouroboros-consensus.cabal  package-lock.json  package.json  plot_slots_gc.py  script  temp.md  weeder.toml
cabal/: newer-ghcs.cabal
cardano-config/: README.md  cardano-config.cabal
cardano-config/app/: Main.hs
cardano-config/examples/: fullconfig.json  localconnections.json  split.json  storage.json  tracing.json
cardano-config/test/: Main.hs
cardano-configuration/: CHANGELOG.md  NOTICE  cardano-configuration.cabal
cardano-configuration/changelog.d/: scriv.ini
nf-vars/: CHANGELOG.md  nf-vars.cabal
nf-vars/test/: Main.hs
ouroboros-consensus/: CHANGELOG.md  README.md  ouroboros-consensus.cabal
ouroboros-consensus-beacon/: ouroboros-consensus-beacon.cabal
ouroboros-consensus-cardano/: CHANGELOG.md  README.md  ouroboros-consensus-cardano.cabal
ouroboros-consensus-cardano-legacy-block/: CHANGELOG.md  NOTICE  README.md  ouroboros-consensus-cardano-legacy-block.cabal
ouroboros-consensus-cardano-legacy-block/app/: db-analyser.hs
ouroboros-consensus-cardano-legacy-block/changelog.d/: scriv.ini
ouroboros-consensus-cardano-legacy-block/src/: DBSync.hs
ouroboros-consensus-cardano/app/: beacon.hs  block-after.hs  db-analyser.hs  db-immutaliser.hs  db-stresser.hs  db-synthesizer.hs  db-truncater.hs  gen-header.hs  immdb-server.hs  ledger-db-backends-checker.hs  n2n-pg.hs  run-threadnet.hs  snapshot-converter.hs
ouroboros-consensus-cardano/cddl/: base.cddl  cddlc.sh  pull-cddls.hs
ouroboros-consensus-cardano/changelog.d/: 20230428_125119_javier.sagredo_release_mempool_fix.md  20230512_142307_jaredcorduan_update_ledger.md  20230517_135059_alexander.esgen_update_ledger.md  20230519_114733_john.ky_optimise_GetStakeSnapshots.md  20230522_123103_alexander.esgen_pparams_encoding_compat.md  20230523_155615_alexey.kuleshevich_fix_performance_GetFilteredDelegationsAndRewardAccounts.md  20230523_214925_alexander.esgen_bump_ledger_1_2_1_0.md  20230530_105533_alexander_call_cryptoinit.md  20230530_185109_alexander_ensure_defaultmainwithtestenv.md  20230530_185118_alexander_call_cryptoinit.md  20230530_185127_alexander_call_cryptoinit.md  20230612_125709_armandoifsantos_dynamic_block_forging.md  20230621_143811_fraser_new_ledger.md  20230630_172553_fraser.murray.md  20230704_001336_aniket.deshpande_query_constitution.md  20230706_095651_fraser.murray_bump_chaps_index_state_ledger_core.md  20230718_150203_joris_137_add_golden_txs_test_for_localTxSubmissionServer.md  20230809_120937_nick.frisby_preparing_8_3_0_pre.md  20230815_110046_joris_275_consolidate_protocolparams_across_eras.md  20230817_183109_coot_eclipse_evasion.md  20230905_190725_coot_cardano_ledger_conway_1_8.md  20230922_102830_nick.frisby_simplify_ledger_view.md  20230927_125447_alexander.esgen_ledger_conway_1_9.md  20231002_154149_armandoifsantos_fix_peerSharing_handshake.md  20231003_083359_nick.frisby_hfc_fix_confusing_name.md  20231026_110631_teodora.danciu_cardano_ledger_for_8_6.md  20231110_165234_carl.hammann_vote_delegatee_query.md  20231123_120121_damian.only_230_add_option_to_output_data_points_as_JSON.md  20231127_134955_alexander.esgen_enable_n2n_13.md  20231127_154208_alexander.esgen_enable_n2n_13.md  20231212_174729_fraser.murray_warning_cpp_conditional.md  20240104_195829_alexander.esgen_homogenous_cardano_n2c_versions.md  20240111_195320_facundo.dominguez_lightweight_checkpointing.md  20240124_110740_nick.frisby_remove_ntn_hfcdisableera.md  20240124_143703_nick.frisby_conway_only_queries.md  20240126_202311_unsafeFixIO_880.md  20240129_115458_javier.sagredo_ghc_9_8.md  20240206_174354_alexander.esgen_change_epoch_structure.md  20240208_130918_renate.eilers_expose_diskNumShapshots_as_flag.md  20240214_182440_fraser.murray_startup_sanity_checks.md  (+96 more)
ouroboros-consensus-cardano/scripts/: plot-ledger-ops-cost.gp  plot_utxo_growth.py
ouroboros-consensus-cardano/tools-test/: Main.hs
ouroboros-consensus-diffusion/: CHANGELOG.md  NOTICE  README.md  ouroboros-consensus-diffusion.cabal
ouroboros-consensus-diffusion/changelog.d/: 20230427_173647_javier.sagredo_mempool_addtx_fifo.md  20230511_084448_coot_top_level_error_tracer.md  20230512_142120_jaredcorduan_update_ledger.md  20230517_112320_karl.fb.knutsson_trace_peer.md  20230517_140320_karl.fb.knutsson_timeout.md  20230524_174543_alexander_graphviz_lower_bound.md  20230530_085153_marcin_ouroboros_network_bound.md  20230612_124926_armandoifsantos_dynamic_block_forging.md  20230614_135851_damian_update_comment_forkblockforging.md  20230719_151048_armandoifsantos_update_ouroboros_network.md  20230817_181545_coot_eclipse_evasion.md  20230821_065341_nick.frisby_mid_august_releases2.md  20230922_102829_nick.frisby_simplify_ledger_view.md  20231002_154502_armandoifsantos_fix_peerSharing_handshake.md  20231129_105548_nick.frisby_ChainSync_future.md  20231206_171853_nick.frisby_ChainSync_refactor.md  20231218_150810_joris_bump_strict_checked_vars_0_2_0_0.md  20240122_214152_facundo.dominguez_HEAD.md  (+69 more)
ouroboros-consensus-lmdb/: ouroboros-consensus-lmdb.cabal
ouroboros-consensus-lsm/: ouroboros-consensus-lsm.cabal
ouroboros-consensus-observe/: ouroboros-consensus-observe.cabal
peras-cert-conjuring/: peras-cert-conjuring.cabal
rawlock/: CHANGELOG.md  NOTICE  README.md  rawlock.cabal
resource-registry/: CHANGELOG.md  resource-registry.cabal
strict-sop-core/: CHANGELOG.md  NOTICE  strict-sop-core.cabal
(+2575 files in other folders)
