--
-- Enable assertions
--
-- These are in a separate file in order to make it easy to disable all
-- assertion flags again.
--

package cardano-ledger-core
  flags: +asserts

package cardano-ledger-mary
  flags: +asserts

package cardano-ledger-shelley
  flags: +asserts

package io-classes
  flags: +asserts

-- https://github.com/input-output-hk/io-sim/issues/94
-- package io-sim
--   flags: +asserts

package network-mux
  flags: +asserts

package ouroboros-consensus
  flags: +asserts

package ouroboros-consensus-protocols
  flags: +asserts

package ouroboros-consensus-cardano
  flags: +asserts

package ouroboros-consensus-diffusion
  flags: +asserts

package ouroboros-network
  flags: +asserts

package ouroboros-network-api
  flags: +asserts

package ouroboros-network-mock
  flags: +asserts

package ouroboros-network-protocols
  flags: +asserts

package si-timers
  flags: +asserts

package strict-stm
  flags: +asserts

package text-short
  flags: +asserts

package strict-checked-vars
  flags: +checktvarinvariants +checkmvarinvariants

