cabal-version: 3.0
name: cardano-config
version: 0.1.0.0
synopsis: Cardano-node configuration parsing
description:
  Datatypes and parsers for optparse-applicative and from YAML/JSON for the @cardano-node@ configuration.

license: Apache-2.0
license-file: LICENSE
author: Javier Sagredo
maintainer: javier.sagredo@iohk.io
copyright:
  INTERSECT 2026

category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

library
  import: warnings
  exposed-modules:
    Cardano.Configuration
    Cardano.Configuration.Basics
    Cardano.Configuration.CliArgs
    Cardano.Configuration.Common
    Cardano.Configuration.File
    Cardano.Configuration.File.Consensus
    Cardano.Configuration.File.Network
    Cardano.Configuration.File.Protocol
    Cardano.Configuration.File.Storage
    Cardano.Configuration.File.Testing
    Cardano.Configuration.File.Tracing

  build-depends:
    aeson,
    base,
    bytestring,
    cardano-crypto-class,
    cardano-crypto-wrapper,
    cardano-ledger-alonzo,
    cardano-ledger-conway,
    cardano-ledger-core,
    cardano-ledger-dijkstra,
    cardano-ledger-shelley,
    data-default,
    directory,
    filepath,
    iohk-monitoring,
    iproute,
    network,
    optparse-applicative,
    sop-core,
    strict-sop-core,
    text,
    time,
    yaml,

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
