cabal-version: 3.0
name: cardano-configuration
version: 0.28.0.0
synopsis: Node configuration related logic
description: Node configuration related logic
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2019-2023 Input Output Global Inc (IOG), INTERSECT 2023-2025.

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md

library cardano-configuration-lib
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

