cabal-version: 3.0
name: nf-vars
version: 0.1.0.0
synopsis: @strict-checked-vars@ with @NoThunks@ invariants
description: @strict-checked-vars@ with @NoThunks@ invariants.
license: Apache-2.0
license-file: LICENSE
author: IOG Engineering Team
maintainer: hackage@iohk.io
copyright:
  2019-2023 Input Output Global Inc (IOG)
  2023-2024 INTERSECT
  2024      Input Output Global Inc (IOG)

category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

library
  import: common-lib
  exposed-modules:
    Control.Concurrent.Class.MonadMVar.NormalForm
    Control.Concurrent.Class.MonadSTM.NormalForm
    Control.Concurrent.Class.MonadSTM.NormalForm.SVar
    Control.Concurrent.Class.MonadSTM.NormalForm.TVar
    Control.Concurrent.Class.MonadSTM.Strict.SVar

  other-modules:
    NoThunks.Invariant

  build-depends:
    base >=4.14 && <4.20,
    io-classes ^>=1.5,
    nothunks ^>=0.1.5,
    strict-checked-vars ^>=0.2,
    strict-stm ^>=1.5,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite tests
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    io-classes,
    io-sim,
    nf-vars,
    nothunks,
    tasty,
    tasty-quickcheck,

  default-language: Haskell2010
