cabal-version:   3.0
name:            ouroboros-consensus-cardano-beacon
version:         0.7.0.0
synopsis:
  The instantation of the Ouroboros consensus layer used by Cardano

description:
  The instantation of the Ouroboros consensus layer used by Cardano.

license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:       2019-2023 Input Output Global Inc (IOG)
author:          IOHK Engineering Team
maintainer:      operations@iohk.io
category:        Network
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

flag expose-sublibs
  description: Expose all private sublibraries
  manual:      True
  default:     False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -Widentities
    -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

common common-exe
  import:      common-lib
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -I0 -A16m"

executable beacon
  import:         common-exe
  hs-source-dirs: app
  main-is:        beacon.hs
  build-depends:
    , ansi-terminal
    , base
    , bytestring
    , cassava
    , Chart              >=1.9
    , Chart-cairo        >=1.9
    , containers
    , directory
    , extra
    , process
    , text
    , vector
    , vector-algorithms

  -- Chart does not compile on 9.6 right now: https://github.com/timbod7/haskell-chart/issues/248
  if (os(windows) || impl(ghc >=9.6))
    buildable: False
