cabal-version:   3.0
name:            ouroboros-consensus-cardano-legacy-block
version:         0.1.0.0
synopsis:
  Wrapper for the instantation of the Ouroboros consensus layer used by Cardano

description:
  Wrapper for the instantation of the Ouroboros consensus layer used by Cardano.

license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:       2023-2023 Input Output Global Inc (IOG)
author:          IOHK Engineering Team
maintainer:      operations@iohk.io
category:        Network
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -Widentities
    -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

library
  import:          common-lib
  hs-source-dirs:  src
  exposed-modules:
    DBSync
    Legacy.Byron
    Legacy.Byron.Ledger
    Legacy.Byron.Node
    Legacy.Cardano
    Legacy.Cardano.Block
    Legacy.Cardano.CanHardFork
    Legacy.Cardano.Ledger
    Legacy.Cardano.Node
    Legacy.Convert
    Legacy.Shelley
    Legacy.Shelley.Ledger
    Legacy.Shelley.Node
    Ouroboros.Consensus.HardFork.Trans
    Ouroboros.Consensus.Legacy.Block
    Ouroboros.Consensus.Legacy.Util

  build-depends:
    , base                          >=4.14  && <4.19
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-prelude
    , cardano-protocol-tpraos
    , cardano-slotting
    , cborg
    , containers                    >=0.5   && <0.7
    , mtl                           >=2.2   && <2.4
    , nothunks
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , ouroboros-network-api
    , serialise
    , small-steps
    , sop-core
