cabal-version: 3.0
name: ouroboros-consensus-cardano
version: 0.22.0.0
synopsis:
  The instantation of the Ouroboros consensus layer used by Cardano

description:
  The instantation of the Ouroboros consensus layer used by Cardano.

license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2019-2023 Input Output Global Inc (IOG), INTERSECT 2023-2024.

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/IntersectMBO/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

common common-exe
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0 -A16m"

library
  import: common-lib
  hs-source-dirs:
    src/ouroboros-consensus-cardano
    src/byron
    src/shelley

  exposed-modules:
    Ouroboros.Consensus.Byron.ByronHFC
    Ouroboros.Consensus.Byron.Crypto.DSIGN
    Ouroboros.Consensus.Byron.EBBs
    Ouroboros.Consensus.Byron.Ledger
    Ouroboros.Consensus.Byron.Ledger.Block
    Ouroboros.Consensus.Byron.Ledger.Config
    Ouroboros.Consensus.Byron.Ledger.Conversions
    Ouroboros.Consensus.Byron.Ledger.Forge
    Ouroboros.Consensus.Byron.Ledger.HeaderValidation
    Ouroboros.Consensus.Byron.Ledger.Inspect
    Ouroboros.Consensus.Byron.Ledger.Integrity
    Ouroboros.Consensus.Byron.Ledger.Ledger
    Ouroboros.Consensus.Byron.Ledger.Mempool
    Ouroboros.Consensus.Byron.Ledger.NetworkProtocolVersion
    Ouroboros.Consensus.Byron.Ledger.Orphans
    Ouroboros.Consensus.Byron.Ledger.PBFT
    Ouroboros.Consensus.Byron.Ledger.Serialisation
    Ouroboros.Consensus.Byron.Node
    Ouroboros.Consensus.Byron.Node.Serialisation
    Ouroboros.Consensus.Byron.Protocol
    Ouroboros.Consensus.Cardano
    Ouroboros.Consensus.Cardano.Block
    Ouroboros.Consensus.Cardano.CanHardFork
    Ouroboros.Consensus.Cardano.Condense
    Ouroboros.Consensus.Cardano.Node
    Ouroboros.Consensus.Shelley.Crypto
    Ouroboros.Consensus.Shelley.Eras
    Ouroboros.Consensus.Shelley.HFEras
    Ouroboros.Consensus.Shelley.Ledger
    Ouroboros.Consensus.Shelley.Ledger.Block
    Ouroboros.Consensus.Shelley.Ledger.Config
    Ouroboros.Consensus.Shelley.Ledger.Forge
    Ouroboros.Consensus.Shelley.Ledger.Inspect
    Ouroboros.Consensus.Shelley.Ledger.Integrity
    Ouroboros.Consensus.Shelley.Ledger.Ledger
    Ouroboros.Consensus.Shelley.Ledger.Mempool
    Ouroboros.Consensus.Shelley.Ledger.NetworkProtocolVersion
    Ouroboros.Consensus.Shelley.Ledger.PeerSelection
    Ouroboros.Consensus.Shelley.Ledger.Protocol
    Ouroboros.Consensus.Shelley.Ledger.Query
    Ouroboros.Consensus.Shelley.Ledger.Query.Types
    Ouroboros.Consensus.Shelley.Ledger.SupportsProtocol
    Ouroboros.Consensus.Shelley.Node
    Ouroboros.Consensus.Shelley.Node.Common
    Ouroboros.Consensus.Shelley.Node.DiffusionPipelining
    Ouroboros.Consensus.Shelley.Node.Praos
    Ouroboros.Consensus.Shelley.Node.Serialisation
    Ouroboros.Consensus.Shelley.Node.TPraos
    Ouroboros.Consensus.Shelley.Protocol.Abstract
    Ouroboros.Consensus.Shelley.Protocol.Praos
    Ouroboros.Consensus.Shelley.Protocol.TPraos
    Ouroboros.Consensus.Shelley.ShelleyHFC

  build-depends:
    base >=4.14 && <4.22,
    base-deriving-via,
    bytestring >=0.10 && <0.13,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.2,
    cardano-crypto-wrapper,
    cardano-ledger-allegra ^>=1.7,
    cardano-ledger-alonzo ^>=1.13,
    cardano-ledger-api ^>=1.11,
    cardano-ledger-babbage ^>=1.11,
    cardano-ledger-binary ^>=1.6,
    cardano-ledger-byron ^>=1.1,
    cardano-ledger-conway ^>=1.19,
    cardano-ledger-core ^>=1.17,
    cardano-ledger-mary ^>=1.8,
    cardano-ledger-shelley ^>=1.16,
    cardano-prelude,
    cardano-protocol-tpraos ^>=1.4,
    cardano-slotting,
    cardano-strict-containers,
    cborg ^>=0.2.2,
    containers >=0.5 && <0.8,
    crypton,
    deepseq,
    formatting >=6.3 && <7.3,
    measures,
    microlens,
    mtl,
    nothunks,
    ouroboros-consensus ^>=0.23,
    ouroboros-consensus-protocol ^>=0.11,
    ouroboros-network-api ^>=0.13,
    serialise ^>=0.2,
    small-steps,
    sop-core ^>=0.5,
    sop-extras ^>=0.2,
    strict-sop-core ^>=0.1,
    text,
    these ^>=1.2,
    validation,
    vector-map,

  -- GHC 8.10.7 on aarch64-darwin cannot use text-2
  build-depends: text >=1.2.5.0 && <2.2
