cabal-version: 3.0
name: ouroboros-consensus-diffusion
version: 0.21.0.1
synopsis: Integration for the Ouroboros Network layer
description:
  Top level integration for consensus & network layers of the Ouroboros blockchain protocol.

license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2022-2023 Input Output Global Inc (IOG), INTERSECT 2023-2024.

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/IntersectMBO/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
    cpp-options: -DENABLE_ASSERTIONS

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

library
  import: common-lib
  hs-source-dirs: src/ouroboros-consensus-diffusion
  exposed-modules:
    Ouroboros.Consensus.Network.NodeToClient
    Ouroboros.Consensus.Network.NodeToNode
    Ouroboros.Consensus.Node
    Ouroboros.Consensus.Node.DbLock
    Ouroboros.Consensus.Node.DbMarker
    Ouroboros.Consensus.Node.ErrorPolicy
    Ouroboros.Consensus.Node.Exit
    Ouroboros.Consensus.Node.ExitPolicy
    Ouroboros.Consensus.Node.GSM
    Ouroboros.Consensus.Node.Genesis
    Ouroboros.Consensus.Node.Recovery
    Ouroboros.Consensus.Node.RethrowPolicy
    Ouroboros.Consensus.Node.Tracers
    Ouroboros.Consensus.NodeKernel

  reexported-modules:
    Ouroboros.Consensus.Block,
    Ouroboros.Consensus.Node.NetworkProtocolVersion,
    Ouroboros.Consensus.Node.Run,

  build-depends:
    base >=4.14 && <4.22,
    bytestring >=0.10 && <0.13,
    cardano-slotting,
    cborg ^>=0.2.2,
    containers >=0.5 && <0.8,
    contra-tracer,
    deepseq,
    dns,
    filepath,
    fs-api ^>=0.3,
    hashable,
    io-classes ^>=1.5,
    mtl,
    network-mux ^>=0.7,
    ouroboros-consensus ^>=0.24,
    ouroboros-network ^>=0.20.1,
    ouroboros-network-api ^>=0.13,
    ouroboros-network-framework ^>=0.17,
    ouroboros-network-protocols ^>=0.14,
    random,
    resource-registry ^>=0.1,
    safe-wild-cards ^>=1.0,
    serialise ^>=0.2,
    si-timers ^>=1.5,
    strict-stm ^>=1.5,
    text,
    time,
    transformers,
    typed-protocols,
    typed-protocols-stateful,

  -- GHC 8.10.7 on aarch64-darwin cannot use text-2
  build-depends: text >=1.2.5.0 && <2.2
