cabal-version: 3.0
name: ouroboros-consensus-lsm
version: 0.1.0.0
synopsis: LSM LedgerDB V2 backend for ouroboros-consensus
description: LSM LedgerDB V2 backend for ouroboros-consensus.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2019-2023 Input Output Global Inc (IOG), INTERSECT 2023-2024.

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/IntersectMBO/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
    cpp-options: -DENABLE_ASSERTIONS

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

common common-bench
  import: common-test
  ghc-options:
    -threaded
    -rtsopts

  -- We use this option to avoid skewed results due to changes in cache-line
  -- alignment. See
  -- https://github.com/Bodigrim/tasty-bench#comparison-against-baseline
  ghc-options: -fproc-alignment=64

library
  import: common-lib
  hs-source-dirs: src
  exposed-modules:
    Ouroboros.Consensus.Storage.LedgerDB.V2.LSM

  build-depends:
    base >=4.14 && <4.22,
    blockio,
    cardano-binary,
    containers >=0.5 && <0.8,
    contra-tracer,
    fs-api ^>=0.4,
    ouroboros-consensus,
    lsm-tree,
    mempack,
    mtl,
    nothunks ^>=0.2,
    primitive,
    resource-registry ^>=0.1,
    serialise ^>=0.2,
    text,
    transformers,
    vector ^>=0.13,
    streaming,

  build-depends: text >=1.2.5.0 && <2.2
