cabal-version: 3.0
name: ouroboros-consensus-observe
version: 0.23.0.0
synopsis: Observability library for Ouroboros Consensus
description:
  Class and instances used for observability integrations (logs and metrics)

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple

source-repository head
  type: git
  location: https://github.com/IntersectMBO/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

library
  import: common-lib
  hs-source-dirs: src
  exposed-modules:
    Ouroboros.Consensus.Observe.ConsensusJson

  build-depends:
    base >=4.14 && <4.22,
    bytestring >=0.10 && <0.13,
    ouroboros-consensus ^>=0.27,
    ouroboros-consensus-cardano,
    ouroboros-consensus-diffusion,
    text,
    aeson >= 2.2,
    base16-bytestring >= 1.0
